# uuidcpp

./: .gitignore  CMakeLists.txt  Makefile  packages.cmake
include/: CMakeLists.txt
include/uuid++/: CMakeLists.txt  commline  commline.h  json.hpp  uuid.h  zipline  zipline.h
src/: CMakeLists.txt
src/libuuid++/: CMakeLists.txt  uuid.cpp  uuid.test.cpp
